// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for BitBucket:Branch 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M10 8.732v.28A1.993 1.993 0 018.002 11l-.004 2A3.995 3.995 0 0012 9.007v-.274a2 2 0 10-2 0zm-4-3a2 2 0 10-2 0v4.536a2 2 0 102 0V5.732zM2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2z"
      fill="#2684FF"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for BitBucket:Commit 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm6 9a1 1 0 100-2 1 1 0 000 2zm-.986 1.834a3.001 3.001 0 010-5.668A1.007 1.007 0 017 5V3a1 1 0 112 0v2c0 .057-.005.112-.014.166a3.001 3.001 0 010 5.668c.01.054.014.11.014.166v2a1 1 0 01-2 0v-2c0-.057.005-.112.014-.166z"
      fill="#FFAB00"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for BitBucket:Project 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="24"
    role="presentation"
    viewBox="0 0 24 24"
    width="24"
  >
    <g
      fill="currentColor"
      fill-rule="evenodd"
    >
      <path
        d="M8.126 10H4c-1.113 0-2 .895-2 2v3.73c0 1.31 1.874 2.053 4 2.23v-2.964A3.002 3.002 0 019 12h.354a4 4 0 01-1.228-2zm7.748 0H20c1.105 0 2 .885 2 2v3.73c0 1.31-1.874 2.053-4 2.23v-2.964A3 3 0 0015 12h-.354a4 4 0 001.228-2zM9.967 5.554a3 3 0 10-1.963 3.274 3.999 3.999 0 011.963-3.274zm6.03 3.274a3 3 0 10-1.963-3.276 3.994 3.994 0 011.963 3.276z"
      />
      <path
        d="M7 15c0-1.105.887-2 2-2h6c1.105 0 2 .885 2 2v3.73c0 3.027-10 3.027-10 0V15z"
      />
      <circle
        cx="12"
        cy="9"
        r="3"
      />
    </g>
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for BitBucket:PullRequest 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M6.417 6H9a1 1 0 011 1v1a1 1 0 002 0V7a3 3 0 00-3-3H6.415l.294-.295a1 1 0 10-1.413-1.414l-2.003 2a1 1 0 00.001 1.415l2.002 2.001a.999.999 0 001.414-.002.999.999 0 00-.001-1.413L6.417 6zM2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm9 14a2 2 0 100-4 2 2 0 000 4z"
      fill="#36B37E"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for BitBucket:Repo 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm2.92 4.72L2.34 7.3a.998.998 0 000 1.414l2.58 2.578a1 1 0 001.414-1.416L4.46 8.006l1.873-1.871A1 1 0 104.92 4.72zm4.792 0a.999.999 0 000 1.415l1.874 1.87-1.873 1.87a1 1 0 101.414 1.416l2.58-2.58a1 1 0 000-1.414L11.126 4.72a.996.996 0 00-.706-.292.995.995 0 00-.708.293z"
      fill="#6554C0"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType.Image 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm4.75 11.75l-.543-.543a1 1 0 00-1.414 0L3 13h10v-2.25l-1.795-1.974a1 1 0 00-1.447-.034L6.75 11.75zM4.667 6.333a1.667 1.667 0 100-3.333 1.667 1.667 0 000 3.333z"
      fill="#FFAB00"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType:Archive 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm4 3v2h2V3H6zm2 2v2h2V5H8zM6 7v2h2V7H6zm2 2v2h2V9H8zm-2.307 2v2h2v-2h-2z"
      fill="#5E6C84"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType:Audio 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm11 4.195v-.753c0-.271-.23-.468-.514-.44l-6.115.634a.565.565 0 00-.514.545v4.616a2 2 0 00-.571-.083H5a2 2 0 00-2 2V11a2 2 0 002 2h.286a2 2 0 002-2V5.76l4.285-.444v2.767A2 2 0 0011 8h-.286a2 2 0 00-2 2v.286a2 2 0 002 2H11a2 2 0 002-2V4.195z"
      fill="#FF5630"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType:Blog 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M6.972 6.128a2.5 2.5 0 10-2.37 2.87c-.277.394-.616.815-1.016 1.265a.916.916 0 00-.058 1.147.607.607 0 00.948.043c1.939-2.221 2.77-3.996 2.496-5.325zm7 0a2.5 2.5 0 10-2.37 2.87c-.277.394-.616.815-1.016 1.265a.916.916 0 00-.058 1.147.607.607 0 00.948.043c1.939-2.221 2.77-3.996 2.496-5.325zM2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2z"
      fill="#2684FF"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType:Code 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M0 1.994C0 .893.895 0 1.994 0h12.012C15.107 0 16 .895 16 1.994v12.012A1.995 1.995 0 0114.006 16H1.994A1.995 1.995 0 010 14.006V1.994zm6.639 8.417L4.253 8.1l2.589-2.51a.924.924 0 10-1.288-1.328L2.281 7.435a.925.925 0 000 1.328l3.07 2.976a.925.925 0 101.288-1.328zm7.203-3.173L10.77 4.26a.924.924 0 10-1.286 1.33l2.385 2.313-2.588 2.51a.924.924 0 101.287 1.327l3.274-3.173a.925.925 0 000-1.328z"
      fill="#00B8D9"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType:Document 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm2 3a1 1 0 100 2h8a1 1 0 000-2H4zm0 4a1 1 0 100 2h8a1 1 0 000-2H4zm0 4a1 1 0 000 2h4a1 1 0 000-2H4z"
      fill="#2684FF"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType:Excel 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm1.235 4.258A.273.273 0 003 4.53v6.969c0 .136.1.252.236.27l6.953.962a.273.273 0 00.311-.271V3.542a.273.273 0 00-.312-.27l-6.953.986zm7.89.617v6.25h1.563c.172 0 .312-.14.312-.313V5.189a.312.312 0 00-.313-.313h-1.562zM4.858 10.2l1.35-2.13-1.341-2.098h1.04l.881 1.48h.053l.89-1.48h.991L7.33 8.085 8.702 10.2H7.694l-.908-1.433h-.053l-.92 1.433h-.955z"
      fill="#007442"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType:Executable 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M0 1.994C0 .893.895 0 1.994 0h12.012C15.107 0 16 .895 16 1.994v12.012A1.995 1.995 0 0114.006 16H1.994A1.995 1.995 0 010 14.006V1.994zm3 6.72v3.572c0 .394.32.714.714.714h8.572c.394 0 .714-.32.714-.714V8.714H3zM4.345 3a.714.714 0 00-.709.626L3 8.714h10l-.636-5.088A.714.714 0 0011.655 3h-7.31zm.798 7.143h5.714a.714.714 0 010 1.428H5.143a.714.714 0 110-1.428z"
      fill="#5E6C84"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType:File 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M8 3H5.333C4.597 3 4 3.617 4 4.378v7.244C4 12.382 4.597 13 5.333 13h5.334c.736 0 1.333-.617 1.333-1.378V8h-1.333v3.622H5.333V4.378H8v1.414c0 .736.597 1.333 1.333 1.333h2.334c.184 0 .333-.15.333-.333v-.903a.333.333 0 00-.093-.231l-2.164-2.25A1.333 1.333 0 008.782 3H8zM0 1.994C0 .893.895 0 1.994 0h12.012C15.107 0 16 .895 16 1.994v12.012A1.995 1.995 0 0114.006 16H1.994A1.995 1.995 0 010 14.006V1.994z"
      fill="#5E6C84"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType:Folder 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <g
      fill="#B3D4FF"
      fill-rule="evenodd"
    >
      <path
        d="M6.667 3H15a1 1 0 011 1v10.05a1 1 0 01-1 1H1a1 1 0 01-1-1V3a1 1 0 011-1h4.667a1 1 0 011 1z"
      />
      <path
        d="M0 4.05h16v10a1 1 0 01-1 1H1a1 1 0 01-1-1v-10z"
        style="mix-blend-mode:multiply"
      />
    </g>
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType:GIF 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm7.042 11.09H7.755a.162.162 0 01-.162-.161v-5.34c0-.09.072-.162.162-.162h1.287c.09 0 .163.072.163.163v5.339c0 .09-.073.162-.163.162m2.528 0h-1.288a.162.162 0 01-.162-.162v-5.34c0-.09.072-.162.162-.162h3.556c.089 0 .162.072.162.163v1.048c0 .09-.073.162-.162.162h-2.106v.947h1.898c.09 0 .162.073.162.162v1.013c0 .09-.072.162-.162.162h-1.898v1.845c0 .09-.074.162-.162.162m-7.045.097C2.944 11.188 2 10.207 2 8.562v-.641c0-1.597.968-2.588 2.528-2.588 1.544 0 2.291.978 2.349 1.948a.161.161 0 01-.162.172H5.463a.162.162 0 01-.16-.133c-.066-.367-.368-.595-.786-.595-.74 0-.894.657-.894 1.207v.626c0 .822.312 1.238.929 1.238.59 0 .8-.359.8-.667v-.06h-.77a.162.162 0 01-.161-.163v-.915c0-.09.072-.162.162-.162h2.144c.09 0 .162.072.162.162v1.036c0 .997-.62 2.161-2.364 2.161"
      fill="#FFAB00"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType:Generic 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M8 3H5.333C4.597 3 4 3.617 4 4.378v7.244C4 12.382 4.597 13 5.333 13h5.334c.736 0 1.333-.617 1.333-1.378V8h-1.333v3.622H5.333V4.378H8v1.414c0 .736.597 1.333 1.333 1.333h2.334c.184 0 .333-.15.333-.333v-.903a.333.333 0 00-.093-.231l-2.164-2.25A1.333 1.333 0 008.782 3H8zM0 1.994C0 .893.895 0 1.994 0h12.012C15.107 0 16 .895 16 1.994v12.012A1.995 1.995 0 0114.006 16H1.994A1.995 1.995 0 010 14.006V1.994z"
      fill="#5E6C84"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType:GoogleDocs 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm8.287 2.5l-4.067.04 3.508 6.114 4.066-.041L10.287 2.5zM2 9.33l2.068 3.523L7.576 6.74 5.508 3.217 2 9.331zm4.984.106L4.987 13h7.015L14 9.437H6.984z"
      fill="#2196F3"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType:GoogleForms 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm8.287 2.5l-4.067.04 3.508 6.114 4.066-.041L10.287 2.5zM2 9.33l2.068 3.523L7.576 6.74 5.508 3.217 2 9.331zm4.984.106L4.987 13h7.015L14 9.437H6.984z"
      fill="#673AB7"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType:GoogleSheets 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm8.287 2.5l-4.067.04 3.508 6.114 4.066-.041L10.287 2.5zM2 9.33l2.068 3.523L7.576 6.74 5.508 3.217 2 9.331zm4.984.106L4.987 13h7.015L14 9.437H6.984z"
      fill="#0A9D58"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType:GoogleSlides 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm8.287 2.5l-4.067.04 3.508 6.114 4.066-.041L10.287 2.5zM2 9.33l2.068 3.523L7.576 6.74 5.508 3.217 2 9.331zm4.984.106L4.987 13h7.015L14 9.437H6.984z"
      fill="#FFC107"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType:PDF 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm1.23 8.113h.323c.744 0 .802-.214.802-.517 0-.346-.179-.514-.545-.514h-.58v1.03zm4.194 1.456h.443c.494 0 1-.147 1-1.237 0-1.1-.534-1.24-1-1.24h-.443v2.477zM2.975 10.66h-.72A.256.256 0 012 10.404V6.255c0-.14.114-.255.255-.255h1.663c.989 0 1.68.656 1.68 1.596 0 .953-.677 1.593-1.683 1.593H3.23v1.215a.256.256 0 01-.256.256zm4.968 0H6.448a.256.256 0 01-.255-.256V6.255c0-.14.114-.255.255-.255h1.495c1.404 0 2.178.825 2.178 2.323 0 1.507-.774 2.337-2.178 2.337zm3.85 0h-.72a.256.256 0 01-.256-.256V6.255c0-.14.114-.255.255-.255h2.673c.14 0 .255.115.255.255v.587a.256.256 0 01-.255.255h-1.697v.76h1.528c.141 0 .255.115.255.256v.577c0 .14-.114.256-.255.256h-1.528v1.458a.256.256 0 01-.255.256z"
      fill="#FF5630"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType:Powerpoint 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm1.235 4.258A.273.273 0 003 4.53v6.969c0 .136.1.252.236.27l6.953.962a.273.273 0 00.311-.271V3.542a.273.273 0 00-.312-.27l-6.953.986zm7.89.617v6.25h1.563c.172 0 .312-.14.312-.313V5.189a.312.312 0 00-.313-.313h-1.562zM5.313 6.072h1.763c.87 0 1.465.583 1.465 1.462 0 .87-.618 1.454-1.509 1.454h-.835V10.3h-.884V6.072zm.884.727v1.47h.642c.507 0 .803-.257.803-.732 0-.48-.29-.738-.8-.738h-.645z"
      fill="#CA5010"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType:Presentation 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm10 3a1 1 0 00-1 1v8a1 1 0 002 0V4a1 1 0 00-1-1zM8 6a1 1 0 00-1 1v5a1 1 0 002 0V7a1 1 0 00-1-1zM4 9a1 1 0 00-1 1v2a1 1 0 002 0v-2a1 1 0 00-1-1z"
      fill="#6554C0"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType:Sketch 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm6.02 13.333a.669.669 0 00.502-.228L13.17 7.77a.667.667 0 00.063-.79l-1.657-2.666A.668.668 0 0011.01 4H5.116a.669.669 0 00-.554.296L2.779 6.963a.667.667 0 00.054.81l4.686 5.334a.665.665 0 00.5.226z"
      fill="#FF8B00"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType:Spreadsheet 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm2 3a1 1 0 100 2h1a1 1 0 100-2H4zm0 4a1 1 0 100 2h1a1 1 0 100-2H4zm0 4a1 1 0 000 2h1a1 1 0 000-2H4zm5-8a1 1 0 100 2h3a1 1 0 000-2H9zm0 4a1 1 0 100 2h3a1 1 0 000-2H9zm0 4a1 1 0 000 2h3a1 1 0 000-2H9z"
      fill="#36B37E"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType:Template 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="24"
    role="presentation"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M18.99 8.99l.01 1.015V19a2 2 0 01-2 2H7a2 2 0 01-2-2V5a2 2 0 012-2h5.275c.469 0 .922.164 1.282.464L18.631 7.7c.227.19.359.471.359.768v.521zM12.02 5L12 8.192a.99.99 0 00.994.991h4L12.02 5z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType:Video 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm11.37 10.954c.285.138.63-.05.63-.343V5.39c0-.293-.345-.481-.63-.343L11 6.194v3.613l2.37 1.147zM2 5.99v4.018c0 .54.449.991 1.003.991h4.994A.99.99 0 009 10.01V5.99C9 5.452 8.551 5 7.997 5H3.003A.99.99 0 002 5.99z"
      fill="#FF5630"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for FileType:WordDocument 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm1.235 4.258A.273.273 0 003 4.53v6.969c0 .136.1.252.236.27l6.953.962a.273.273 0 00.311-.271V3.542a.273.273 0 00-.312-.27l-6.953.986zm7.89.617v6.25h1.563c.172 0 .312-.14.312-.313V5.189a.312.312 0 00-.313-.313h-1.562zM6.803 7.602L6.012 10.4h-.835l-1.12-4.228h.92l.66 2.98h.047l.77-2.98h.747l.786 2.98h.046l.654-2.98H9.6L8.479 10.4h-.83l-.8-2.798h-.046z"
      fill="#004E8C"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for Jira:Bug 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm6 12a4 4 0 100-8 4 4 0 000 8z"
      fill="#FF5630"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for Jira:Change 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M10.58 7H5.467l.866-.865A1 1 0 104.92 4.72L2.34 7.3a.998.998 0 000 1.414l2.58 2.578a1 1 0 001.414-1.416L5.456 9h5.134l-.877.876a1 1 0 101.414 1.415l2.58-2.58a1 1 0 000-1.414L11.126 4.72a.996.996 0 00-.706-.292.999.999 0 00-.707 1.707l.866.865zM2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2z"
      fill="#FFAB00"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for Jira:Epic 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm9.912 7.767A.486.486 0 0012 7.5a.5.5 0 00-.5-.5H9V3.5a.495.495 0 00-.872-.327l-.002-.001-3.977 4.973-.008.009-.028.036.002.004A.487.487 0 004 8.5a.5.5 0 00.5.5c.028 0 .051-.011.077-.016H7V12.5a.5.5 0 00.5.5c.124 0 .234-.05.321-.124l.004.001.007-.009c.03-.027.051-.059.074-.092l3.934-4.913c.019-.018.031-.039.047-.06l.027-.033-.002-.003z"
      fill="#6554C0"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for Jira:Incident 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M4.785 10h6.43L10.5 8H5.499l-.714 2zM4 11a1 1 0 00-1 1v1h10v-1a1 1 0 00-1-1H4zm1.856-4h4.288L8.942 3.632a1 1 0 00-1.884 0L5.856 7zM2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2z"
      fill="#FF5630"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for Jira:Problem 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M5.968 11.446l5.478-5.478a4 4 0 01-5.478 5.478zm-.796-.618zm-.618-.796a4 4 0 015.478-5.478l-5.478 5.478zm6.274-4.86zM2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm6 14A6 6 0 108 2a6 6 0 000 12z"
      fill="#FF5630"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for Jira:ServiceRequest 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm1 4a1 1 0 00-1 1v6a1 1 0 001 1h10a1 1 0 001-1V5a1 1 0 00-1-1H3zm1 2v4h8V6H4z"
      fill="#2684FF"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for Jira:Story 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M2 0h12a2 2 0 012 2v12a2 2 0 01-2 2H2a2 2 0 01-2-2V2a2 2 0 012-2zm6 11l-2.863 1.822c-.42.38-1.137.111-1.137-.427v-8.19C4 3.54 4.596 3 5.333 3h5.334C11.403 3 12 3.539 12 4.206v8.19c0 .537-.719.806-1.139.426L8 11zm0-2.371l2 1.274V5H6v4.902L8 8.63z"
      fill="#36B37E"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for Jira:SubTask 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M9 7V4a1 1 0 00-1-1H4a1 1 0 00-1 1v4a1 1 0 001 1h3v3a1 1 0 001 1h4a1 1 0 001-1V8a1 1 0 00-1-1H9zM0 1.994C0 .893.895 0 1.994 0h12.012C15.107 0 16 .895 16 1.994v12.012A1.995 1.995 0 0114.006 16H1.994A1.995 1.995 0 010 14.006V1.994zM9 9h2v2H9V9zM5 5h2v2H5V5z"
      fill="#2684FF"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for Jira:Task 1`] = `
.emotion-0 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  width: 16px;
  height: 16px;
}

.emotion-0 > svg {
  overflow: hidden;
  pointer-events: none;
  max-width: 100%;
  max-height: 100%;
  color: var(--icon-primary-color);
  fill: var(--icon-secondary-color);
  vertical-align: bottom;
}

.emotion-0 > svg stop {
  stop-color: currentColor;
}

@media screen and (forced-colors:active) {
  .emotion-0 > svg {
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    --icon-primary-color: CanvasText;
    --icon-secondary-color: Canvas;
  }
}

.emotion-0 > svg {
  width: 16px;
  height: 16px;
}

<span
  aria-label="Link"
  class="emotion-0"
  data-testid="smart-element-icon-icon"
  role="img"
  style="--icon-primary-color: currentColor; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
>
  <svg
    height="16"
    role="presentation"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M0 1.994C0 .893.895 0 1.994 0h12.012C15.107 0 16 .895 16 1.994v12.012A1.995 1.995 0 0114.006 16H1.994A1.995 1.995 0 010 14.006V1.994zM4.667 3C3.747 3 3 3.746 3 4.667v6.666C3 12.253 3.746 13 4.667 13h6.666c.92 0 1.667-.746 1.667-1.667V4.667C13 3.747 12.254 3 11.333 3H4.667zM5 5v6h6V5H5z"
      fill="#2684FF"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for Provider:Confluence 1`] = `
.emotion-0 {
  display: inline-block;
  position: relative;
  color: var(--logo-color);
  fill: var(--logo-fill);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 32px;
}

.emotion-0 > svg {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  fill: inherit;
}

.emotion-0 > canvas {
  display: block;
  height: 100%;
  visibility: hidden;
}

<span
  aria-label="Confluence"
  class="emotion-0"
  role="img"
  style="--logo-color: #2684FF; --logo-fill: #253858;"
>
  <canvas
    aria-hidden="true"
    height="32"
    width="32"
  />
  
  
  <svg
    aria-hidden="true"
    focusable="false"
    viewBox="0 0 32 32"
    xmlns="http://www.w3.org/2000/svg"
  >
    
    
    <defs>
      
      
      <lineargradient
        id="uid1-1"
        x1="60.6779047%"
        x2="14.341981%"
        y1="137.626433%"
        y2="112.08042%"
      >
        
        
        <stop
          offset="0%"
          stop-color="#0052CC"
        />
        
        
        <stop
          offset="100%"
          stop-color="#2684FF"
        />
        
      
      </lineargradient>
      
      
      <lineargradient
        id="uid1-2"
        x1="12.3282701%"
        x2="74.1300776%"
        y1="-53.9760846%"
        y2="-33.2553066%"
      >
        
        
        <stop
          offset="0%"
          stop-color="#0052CC"
        />
        
        
        <stop
          offset="100%"
          stop-color="#2684FF"
        />
        
      
      </lineargradient>
      
    
    </defs>
    
    
    <g
      fill-rule="nonzero"
      stroke="none"
      stroke-width="1"
    >
      
      
      <path
        d="M5.21454927,22.0245336 C4.97082816,22.4219865 4.69711061,22.8831818 4.46463817,23.2506383 C4.25655728,23.602269 4.36826343,24.0557627 4.71585838,24.2705174 L9.59028054,27.2701618 C9.76138278,27.3758032 9.96774369,27.4083016 10.1630326,27.3603607 C10.3583215,27.3124197 10.5261749,27.1880564 10.6289074,27.015192 C10.8238843,26.6889807 11.0751045,26.2652809 11.3488221,25.8115847 C13.2798432,22.6244625 15.2221129,23.0144163 18.7241978,24.686718 L23.5573748,26.9851956 C23.7404243,27.0723219 23.9509502,27.0816253 24.1409716,27.0109854 C24.3309931,26.9403455 24.4843191,26.7957811 24.5660052,26.61024 L26.8869801,21.3608623 C27.0509607,20.9859459 26.8841076,20.5487907 26.5120245,20.3784788 C25.4921454,19.8985357 23.4636359,18.942399 21.6376024,18.0612535 C15.0683811,14.8741313 9.48529299,15.0841064 5.21454927,22.0245336 Z"
        fill="url(#uid1-1)"
      />
      
      
      <path
        d="M27.0752616,9.74267061 C27.3190367,9.34512979 27.5928148,8.88383241 27.8253387,8.51629467 C28.0334656,8.1645861 27.9217347,7.71099215 27.5740629,7.4961899 L22.6985622,4.49588177 C22.5250856,4.3802891 22.3113292,4.3421035 22.1085604,4.39048341 C21.9057917,4.43886333 21.7323024,4.56944439 21.6297024,4.75090796 C21.4346824,5.07719147 21.1834066,5.50098499 20.9096284,5.9547816 C18.9781801,9.14260899 17.0354806,8.75256893 13.5326208,7.07989715 L8.71337588,4.78466143 C8.53028584,4.69751579 8.31971336,4.68821035 8.1296499,4.75886591 C7.93958645,4.82952147 7.78622651,4.97411777 7.70452227,5.15969994 L5.38303386,10.4102392 C5.21901692,10.7852385 5.38590698,11.2224905 5.75807237,11.3928401 C6.77817714,11.8728894 8.80713551,12.8292376 10.6335731,13.7105781 C17.2192494,16.8946551 22.8035729,16.6846336 27.0752616,9.74267061 Z"
        fill="url(#uid1-2)"
      />
      
    
    </g>
    
  
  </svg>
</span>
`;

exports[`Element: Icon AtlaskitIcon renders atlaskit icon for Provider:Jira 1`] = `
.emotion-0 {
  display: inline-block;
  position: relative;
  color: var(--logo-color);
  fill: var(--logo-fill);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 32px;
}

.emotion-0 > svg {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  fill: inherit;
}

.emotion-0 > canvas {
  display: block;
  height: 100%;
  visibility: hidden;
}

<span
  aria-label="Jira"
  class="emotion-0"
  role="img"
  style="--logo-color: #2684FF; --logo-fill: #253858;"
>
  <canvas
    aria-hidden="true"
    height="32"
    width="32"
  />
  
  
  <svg
    aria-hidden="true"
    focusable="false"
    viewBox="0 0 32 32"
    xmlns="http://www.w3.org/2000/svg"
  >
    
    
    <defs>
      
      
      <lineargradient
        id="uid2"
        x1="94.092%"
        x2="56.535%"
        y1="6.033%"
        y2="43.087%"
      >
        
        
        <stop
          offset="18%"
          stop-color="#0052CC"
        />
        
        
        <stop
          offset="100%"
          stop-color="#2684FF"
        />
        
      
      </lineargradient>
      
    
    </defs>
    
    
    <g
      fill-rule="nonzero"
      stroke="none"
      stroke-width="1"
    >
      
      
      <path
        d="M26.0406546,5 L14.9983562,5 C14.9983562,6.32163748 15.5233746,7.58914413 16.4579134,8.52368295 C17.3924523,9.45822178 18.6599589,9.98324022 19.9815964,9.98324022 L22.0151159,9.98324022 L22.0151159,11.9465283 C22.0168782,14.6974491 24.2474348,16.9265768 26.9983562,16.9265762 L26.9983562,5.95770152 C26.9983562,5.42877757 26.5695786,5 26.0406546,5 Z"
        fill="currentColor"
      />
      
      
      <path
        d="M20.0420436,11 L9,11 C9.00176139,13.7504065 11.2309666,15.9796117 13.9813731,15.9813731 L16.0154337,15.9813731 L16.0154337,17.9451836 C16.0154337,19.2671728 16.5405919,20.5350167 17.4753794,21.4698042 C18.4101669,22.4045917 19.6780108,22.9297499 21,22.9297499 L21,11.9579564 C21,11.4288917 20.5711083,11 20.0420436,11 Z"
        fill="url(#uid2)"
      />
      
      
      <path
        d="M14.0420436,17 L3,17 C3.00176275,19.7516528 5.23291286,21.9813736 7.98456626,21.9813731 L10.0250133,21.9813731 L10.0250133,23.9451836 C10.0250082,26.6943468 12.2508419,28.9244664 15,28.9297499 L15,17.9579564 C15,17.4288917 14.5711083,17 14.0420436,17 Z"
        fill="url(#uid2)"
      />
      
    
    </g>
    
  
  </svg>
</span>
`;
